invisible videos fix

--- a/src/style/_gallery.scss
+++ b/src/style/_gallery.scss
@@ -112,6 +112,7 @@
 	left: 0;
 	opacity: 0;
 	transition: opacity .4s ease;
+	width: 100%;
 
 	&--open {
 		opacity: 1;
